add section books

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>sites</title>
 </head>
 <body>
-    <a href="dock/srs/index.html" class="dock"></a>
-    <a href="trlm/srs/index.html" class="trlm"></a>
+    <a href="dock/src/index.html" class="dock">dock</a>
+    <a href="trlm/src/index.html" class="trlm">trlm</a>
+    <a href="kidsbe/src/index.html" class="kidsbe">kidsbe</a>
+
     
 </body>
 </html>
