add section advantages

--- a/kidsbe/src/index.html
+++ b/kidsbe/src/index.html
@@ -269,6 +269,52 @@
 </div>
 </section>
 
+<section class="advantages">
+    <h2 class="advantages_header ">
+        Занимайтесь с удовольствием и достигайте новых вершин
+        следующие 2 месяца и всю жизнь 
+    </h2>
+    <div class="advantages_descr">
+        KidsBe — это комплексная программа, помогающая получить положительные результаты сразу в нескольких сферах
+    </div>
+
+    <div class="advantages_items">
+        <div class="advantages_items_item">
+            <img src="img/advantages/1Brain.svg" alt="" class="advantages_items_item_img">
+            <div class="advantages_items_item_text">Равномерное развитие обоих полушарий
+                мозга и межполушарных связей</div>
+        </div>
+        <div class="advantages_items_item">
+            <img src="img/advantages/2Brain.svg" alt="" class="advantages_items_item_img">
+            <div class="advantages_items_item_text">Укрепление памяти
+                и внимания</div>
+        </div>
+        <div class="advantages_items_item">
+            <img src="img/advantages/3baby.svg" alt="" class="advantages_items_item_img">
+            <div class="advantages_items_item_text">Развитие мышления
+                и познавательного интереса</div>
+        </div>
+        <div class="advantages_items_item">
+            <img src="img/advantages/4Orig.svg" alt="" class="advantages_items_item_img">
+            <div class="advantages_items_item_text">Раскрытие творческих
+                способностей</div>
+        </div>
+        <div class="advantages_items_item">
+            <img src="img/advantages/5moms.svg" alt="" class="advantages_items_item_img">
+            <div class="advantages_items_item_text">Налаживание эмоциональных
+                связей с родителями</div>
+        </div>
+        <div class="advantages_items_item">
+            <img src="img/advantages/6climb.svg" alt="" class="advantages_items_item_img">
+            <div class="advantages_items_item_text">Повышение
+                самостоятельности</div>
+        </div>
+
+    </div>
+
+
+</section>
+
 
 
 </div> <!-- wraper -->
