--- a/kidsbe/src/index.html
+++ b/kidsbe/src/index.html
@@ -377,7 +377,7 @@
         <input type="submit" value="Узнать стоимость" class="form_submit_button">
     </div>
 
-    <div class="form_images">
+    <div class="form_images ">
         <img src="img/forms/Group_form1.svg" alt="" class="form_images_bg">
         <img src="img/forms/kid1 .png" alt="" class="form_images_img">
     </div>
@@ -414,12 +414,12 @@
             <div class="form_submit_allert_text">Нажимая на кнопку, Вы даёте согласие
                 на обработку персональных данных</div>
         </div>
-        <input type="submit" value="Узнать стоимость" class="form_submit_button">
+        <input type="submit" value="Узнать стоимость" class="form_submit_button form_submit_button_2">
     </div>
 
-    <div class="form_images">
-        <img src="img/forms/Group_form2.svg" alt="" class="form_images_bg">
-        <img src="img/forms/kid2 .png" alt="" class="form_images_img">
+    <div class="form_images form_images_2">
+        <img src="img/forms/Group_form2.svg" alt="" class="form_images_bg form_images_bg_2">
+        <img src="img/forms/kid2 .png" alt="" class="form_images_img form_images_img_2">
     </div>
     </div>
 </section>
@@ -453,12 +453,12 @@
             <div class="form_submit_allert_text">Нажимая на кнопку, Вы даёте согласие
                 на обработку персональных данных</div>
         </div>
-        <input type="submit" value="Узнать стоимость" class="form_submit_button">
+        <input type="submit" value="Узнать стоимость" class="form_submit_button form_submit_button_3">
     </div>
 
-    <div class="form_images">
-        <img src="img/forms/Group_form3.svg" alt="" class="form_images_bg">
-        <img src="img/forms/kid3.png" alt="" class="form_images_img">
+    <div class="form_images form_images_3">
+        <img src="img/forms/Group_form3.svg" alt="" class="form_images_bg form_images_bg_3">
+        <img src="img/forms/kid3.png" alt="" class="form_images_img form_images_img_3">
     </div>
     </div>
 </section>
