--- a/kidsbe/src/index.html
+++ b/kidsbe/src/index.html
@@ -16,7 +16,8 @@
 <body>
 <div class="wraper">
 
-<div class="request">
+<div class="request request_hide">
+    <button class="request_close"><img src="icons/close (34) 1.svg" alt=""></button>
     <h2 class="request_header">Оставить заявку</h2>
     <div class=" request_forms">
         <div class=" request_forms_item">
