--- a/kidsbe/src/request.html
+++ b/kidsbe/src/request.html
@@ -21,12 +21,12 @@
     <h2 class="request_header">Оставить заявку</h2>
     <div class=" request_forms">
         <div class=" request_forms_item">
-            <div class=" request_forms_item_descr">Ваше имя</div>
+            <div class=" request_forms_item_description">Ваше имя</div>
             <input type="name" id="name" name="name" class="request_forms_item_input" placeholder="Александр"  required>
         </div>
 
         <div class="request_forms_item">
-                <div class=" request_forms_item_descr">Ваш телефон</div>
+                <div class=" request_forms_item_description">Ваш телефон</div>
                 <input type="tel" id="phone" name="phone" class=" request_forms_item_input" placeholder="+7"  required>
         </div>
     </div>
@@ -50,7 +50,7 @@
         <div class="header_left-logo">
             <img src="icons/logo_kidsbe 1 (1).png" alt="kidsbe" class="logo_img">
         </div>
-        <div class="header_left-descr">
+        <div class="header_left-description">
             продуктивный подход <br>
             к обучению детей
         </div>
@@ -148,7 +148,7 @@
         ваша заявка принята!
     </h2>
     <div class="thank_subheader">Мы свяжемся с вами в ближайшее время</div>
-    <div class="thank_descr">А пока можете Вы подписаться на наши обновления :) </div>
+    <div class="thank_description">А пока можете Вы подписаться на наши обновления :) </div>
     <div class="thank_social">
         <a href="" class="thank_social_link"><img src="" alt="">
         <img src="icons/instagram-act.svg" alt="" class="thank_social_link_img">
