add new sections ytyt

--- a/ytyt/index.html
+++ b/ytyt/index.html
@@ -50,7 +50,7 @@
                     <img src="icons/arrow_tilted.svg" alt="" class="promo_button_img">
                 </button>
             </div>
-            <div class="promo_right">
+            <div class="promo_right hideormin1200">
                 <div class="promo_circl_1 promo_circl">
                     <div class="promo_circl_2 promo_circl">
                         <div class="promo_circl_3 promo_circl">
@@ -62,7 +62,199 @@
                         </div>
                     </div>
                 </div>
-                
+            </div>
+
+            <div class="promo_center hideorbig1200">
+                <div class="promo_circl_1 promo_circl">
+                    <div class="promo_circl_2 promo_circl">
+                        <div class="promo_circl_3 promo_circl">
+                            <div class="promo_circl_4 promo_circl">
+                                <div class="promo_circl_5 promo_circl">
+                                    <img src="img/main_screen.svg" alt="" class="promo_center_img">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="technologies">
+        <div class="container">
+            <h2 class="technologies_header">
+                Какие технологии вы изучите:
+            </h2>
+
+            <div class="technologies_block">
+                <img src="img/technologies.svg" alt="" class="technologies_img hideormin1200">
+                <div class="technologies_content">
+                    <div class="technologies_grid">
+                        <div class="technologies_grid_item technologies_grid_item_python">Язык программирования Python</div>
+                        <div class="technologies_grid_item technologies_grid_item_webs">Сети</div>
+                        <div class="technologies_grid_item technologies_grid_item_data-bases">Базы данных</div>
+                        <div class="technologies_grid_item technologies_grid_item_flasc">Фреймворки Flask и Django</div>
+                        <div class="technologies_grid_item technologies_grid_item_test">Отладка и тестирование</div>
+                        <div class="technologies_grid_item technologies_grid_item_docker">Docker</div>
+                        <div class="technologies_grid_item technologies_grid_item_git">Git</div>
+
+                    </div>
+                    <div class="techologies_grid_description hideormin1200">
+                        Это необходимый минимум для<br> современного backend-разработчика
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="benefits">
+        <div class="container">
+            <h2 class="benefits_header">Обучение в YtYt – это <br> удобно и результативно</h2>
+            <div class="benefits_content ">
+                <div class="benefits_item">
+                    <img src="img/benefits/quotes.svg" alt="" class="benefits_item_img">
+                    <h3 class="benefits_item_header">Огромное количество практики</h3>
+                    <div class="benefits_item_description">Более 500 самостоятельных заданий и 20 полноценных больших проектов</div>
+                </div>
+                <div class="benefits_item">
+                    <img src="img/benefits/tornado.svg" alt="" class="benefits_item_img">
+                    <h3 class="benefits_item_header">Современные методики обучения</h3>
+                    <div class="benefits_item_description">Спиральное обучение: 
+                        погружаемся в материал постепенно, виток за витком</div>
+                </div>
+                <div class="benefits_item">
+                    <img src="img/benefits/computer.svg" alt="" class="benefits_item_img">
+                    <h3 class="benefits_item_header">Простое и понятное изложение</h3>
+                    <div class="benefits_item_description">Вместо заумных терминов – примеры из реального мира</div>
+                </div>
+                <div class="benefits_item">
+                    <img src="img/benefits/calendar.svg" alt="" class="benefits_item_img">
+                    <h3 class="benefits_item_header">Гибкий график занятий</h3>
+                    <div class="benefits_item_description">Учитесь в любое время в удобном 
+                        для вас темпе</div>
+                </div>
+                <div class="benefits_item">
+                    <img src="img/benefits/dialog.svg" alt="" class="benefits_item_img">
+                    <h3 class="benefits_item_header">Прямая связь с опытными программистами</h3>
+                    <div class="benefits_item_description">Задавайте вопросы 
+                        и отправляйте свой код на проверку</div>
+                </div>
+                <div class="benefits_item">
+                    <img src="img/benefits/money.svg" alt="" class="benefits_item_img">
+                    <h3 class="benefits_item_header">Оплата небольшими частями</h3>
+                    <div class="benefits_item_description">Платите только за тот материал, который сейчас изучаете, 
+                        а не за весь курс сразу</div>
+                </div>
+                <div class="benefits_item">
+                    <img src="img/benefits/phone.svg" alt="" class="benefits_item_img">
+                    <h3 class="benefits_item_header">Быстрый и легкий возврат</h3>
+                    <div class="benefits_item_description">Если передумаете учиться –
+                        вернем деньги за 3 рабочих дня</div>
+                </div>
+            </div>
+
+            <div class="benefits_content_mobile ">
+                <div class="benefits_item_mobile ">
+                    <img src="img/benefits/quotes.svg" alt="" class="benefits_item_mobile_img">
+                    <h3 class="benefits_item_mobile_header">Огромное количество практики</h3>
+                    <div class="benefits_item_mobile_description">Более 500 самостоятельных заданий и 20 полноценных больших проектов</div>
+                </div>
+
+                <div class="benefits_item_mobile ">
+                    <img src="img/benefits/dialog.svg" alt="" class="benefits_item_mobile_img">
+                    <h3 class="benefits_item_mobile_header">Прямая связь с опытными программистами</h3>
+                    <div class="benefits_item_mobile_description">Задавайте вопросы 
+                        и отправляйте свой код на проверку</div>
+                </div>
+                <div class="benefits_item_mobile benefits_item_mobile_h155">
+                    <img src="img/benefits/computer.svg" alt="" class="benefits_item_mobile_img">
+                    <h3 class="benefits_item_mobile_header">Простое и понятное изложение</h3>
+                    <div class="benefits_item_mobile_description">Вместо заумных терминов – примеры из реального мира</div>
+                </div>
+                <div class="benefits_item_mobile benefits_item_mobile_h155">
+                    <img src="img/benefits/calendar.svg" alt="" class="benefits_item_mobile_img">
+                    <h3 class="benefits_item_mobile_header">Гибкий график занятий</h3>
+                    <div class="benefits_item_mobile_description">Учитесь в любое время в удобном 
+                        для вас темпе</div>
+                </div>
+                <div class="benefits_item_mobile">
+                    <img src="img/benefits/tornado.svg" alt="" class="benefits_item_mobile_img">
+                    <h3 class="benefits_item_mobile_header">Современные методики обучения</h3>
+                    <div class="benefits_item_mobile_description">Спиральное обучение: 
+                        погружаемся в материал постепенно, виток за витком</div>
+                </div>
+                <div class="benefits_item_mobile">
+                    <img src="img/benefits/money.svg" alt="" class="benefits_item_mobile_img">
+                    <h3 class="benefits_item_mobile_header">Оплата небольшими частями</h3>
+                    <div class="benefits_item_mobile_description">Платите только за тот материал, который сейчас изучаете, 
+                        а не за весь курс сразу</div>
+                </div>
+                <div class="benefits_item_mobile">
+                    <img src="img/benefits/phone.svg" alt="" class="benefits_item_mobile_img">
+                    <div class="benefits_item_mobile_text">
+                        <h3 class="benefits_item_mobile_header">Быстрый и легкий возврат</h3>
+                        <div class="benefits_item_mobile_description">Если передумаете учиться – <br>
+                            вернем деньги за 3 рабочих дня</div>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="learn">
+        <div class="container">
+            <h2 class="learn_header">Как происходит обучение на YtYt?</h2>
+            <div class="learn_description">
+                Обучение должно быть комфортным. Поэтому мы разработали собственную платформу для обучения программированию. На ней вы можете не только изучать теорию, но и запускать готовые примеры и даже писать свой собственный код.
+            </div>
+            <div class="learn_notebook">
+                <img src="img/macbook.png" alt="" class="learn_notebook_img">
+                <a href="#" class="learn_video">
+                    <button class="learn_video_play">
+                        <img src="icons/play.svg" alt="">
+                    </button>
+                    <div class="learn_video_text">Посмотреть видео</div>
+                </a>
+            </div>
+            <div class="learn_content">
+                <div class="learn_content_item">
+                    <div class="learn_content_item_number">01</div>
+                    <h3 class="learn_content_item_title">Весь материал разбит <br>на небольшие уроки</h3>
+                    <div class="learn_content_item_description">Теория и практика подаются маленькими порциями. Так вам будет легче усваивать новые знания.</div>
+                </div>
+
+                <div class="learn_content_item">
+                    <div class="learn_content_item_number">
+                        02
+                    </div>
+                    <h3 class="learn_content_item_title hideormin1200">Обучение 
+                        через практику</h3>
+                        <h3 class="learn_content_item_title hideorbig1200">500 самых разных <br>программ</h3>
+                    <div class="learn_content_item_description hideormin1200">Всё, что вы узнали, вы тут же начинаете применять на практике. Вы сразу видите результаты своего труда.</div>
+                    <div class="learn_content_item_description hideorbig1200">От простого калькулятора ипотеки до мощного веб-приложения, размещенного на сервере и доступного из любой точки мира</div>
+
+                </div>
+
+
+                <div class="learn_content_item">
+                    <div class="learn_content_item_number">03</div>
+                    <h3 class="learn_content_item_title hideormin1200">Нет ограничений <br>по времени</h3>
+                    <h3 class="learn_content_item_title hideorbig1200">Учитесь в <br>комфортном темпе</h3>
+
+                    <div class="learn_content_item_description hideormin1200">Можно совмещать учёбу с работой 
+                        и другими делами. Не нужно выпрашивать академический отпуск, если пришлось сделать перерыв.</div>
+                        <div class="learn_content_item_description hideorbig1200">От 30 минут до нескольких часов
+                            в день. Изучать теорию можно даже
+                            с мобильного телефона. Например, пока вы едете на работу.</div>
+                </div>
+            </div>
+
+            <div class="learn_button_container">
+                <button class="promo_button learn_button">
+                    <div class="promo_button_text">Начать обучение</div>
+                    <img src="icons/arrow_tilted.svg" alt="" class="promo_button_img">
+                </button>
+                <div class="button_description">Попробуйте, первые уроки бесплатны, но нужно пройти тестирование</div>
             </div>
         </div>
     </section>
