coast section beta

--- a/ytyt/index.html
+++ b/ytyt/index.html
@@ -259,7 +259,67 @@
         </div>
     </section>
 
-    
+    <section class="help">
+        <div class="container">
+           <div class="help_grid">
+
+            <div class="help_grid_item"><img src="img/double_programing.svg" alt="" class="help_img_double_programing"></div>
+            <div class="help_grid_item">
+                <h3 class="help_title">Помощь и поддержка</h3>
+                <div class="help_description">
+                    Если в процессе обучения возникнут сложности, вы всегда сможете задать вопрос своему наставнику.
+                    
+
+                </div>
+                <div class="help_description">
+                    Раз в несколько уроков вы будете получать большое задание, которое нужно будет сдавать на проверку код-ревьюеру. Он внимательно изучит ваш код, найдет ошибки и поможет вам стать лучше.
+                </div>
+            </div>
+            <div class="help_grid_item">
+                <h3 class="help_title">Методика обучения</h3>
+                <div class="help_description">
+                    Весь учебный материал структурирован по принципу «спирального обучения». Сначала вы получаете базовые знания, а затем на каждом витке спирали углубляетесь в изученные темы, доводя их понимание до совершенства. Такой подход упрощает обучение и гарантирует, что вы не пропустите ничего важного. 
+                </div>
+            </div>
+            <div class="help_grid_item"><img src="img/coding.svg" alt="" class="help_img_coding"></div>
+
+           </div> 
+        </div>
+    </section>
+
+    <section class="coast">
+        <div class="container">
+            <h2 class="coast_header">Стоимость обучения</h2>
+            <div class="coast_advantages">
+                <div class="coast_advantages_item">
+                    <img src="img/benefits/site.svg" alt="" class="coast_advantages_item_img">
+                    <div class="coast_advantages_item_description">Весь курс разбит на несколько блоков. Оплата поэтапная вы платите только за тот блок, который сейчас проходите.
+                    </div>
+                </div>
+
+                <div class="coast_advantages_item">
+                    <img src="img/benefits/money.svg" alt="" class="coast_advantages_item_img">
+                    <div class="coast_advantages_item_description">Любой из блоков вы можете оплатить в рассрочку</div>
+                </div>
+
+                <div class="coast_advantages_item">
+                    <img src="img/benefits/phone.svg" alt="" class="coast_advantages_item_img">
+                    <div class="coast_advantages_item_description">Если передумаете учиться, то возврат можно оформить в любой момент. Возвращаем деньги за 3 рабочих дня.</div>
+                </div>
+            </div>
+
+
+
+            <div class="coast_form">
+                <img src="img/speaker.svg" alt="" class="coast_form_img">
+                <div class="coast_form_description">Все блоки проходятся строго по порядку. Пропустить какой-то блок или начать обучение с середины нельзя, даже если вы считаете, что уже знаете какую-то часть материала. Только так мы можем гарантировать, что вы получите все знания, предусмотренные учебной программой.</div>
+                <button class="promo_button  coast_button">
+                    <div class="promo_button_text">Начать обучение</div>
+                    <img src="icons/arrow_tilted.svg" alt="" class="promo_button_img">
+                </button>
+            </div>
+        </div>
+    </section>
 
 </body>
 <script  src="js/script.js"></script>
