add footer and bugfix

--- a/ytyt/index.html
+++ b/ytyt/index.html
@@ -202,13 +202,17 @@
     </section>
 
     <section class="learn">
+        <img src="img/bgc_circles.png" alt="" class="background_circles">
         <div class="container">
             <h2 class="learn_header">Как происходит обучение на YtYt?</h2>
             <div class="learn_description">
                 Обучение должно быть комфортным. Поэтому мы разработали собственную платформу для обучения программированию. На ней вы можете не только изучать теорию, но и запускать готовые примеры и даже писать свой собственный код.
             </div>
             <div class="learn_notebook">
-                <img src="img/macbook.png" alt="" class="learn_notebook_img">
+                <div class="learn_notebook_all_img">
+                    <img src="img/macbook.png" alt="" class="learn_notebook_img">
+                    <img src="img/shadow.svg" alt="" class="notebook_shadow">
+                </div>
                 <a href="#" class="learn_video">
                     <button class="learn_video_play">
                         <img src="icons/play.svg" alt="">
@@ -320,6 +324,91 @@
             </div>
         </div>
     </section>
+
+
+    <footer class="footer">
+        <div class="container">
+
+            <div class="footer_main">
+                <div class="logos">
+                    <div class="main_logo">
+                        <img src="icons/main_logo.svg" alt="" class="main_logo_img">
+                        <div class="main_logo_text">Школа <br>программирования</div>
+                    </div>
+
+                    <div class="socials">
+                        <ul class="socials_list">
+                            <li class="socials_list_item">
+                                <a href="" class="socials_list_item_link">
+                                    <img src="icons/instagram.svg" alt="" class="socials_list_item_link_img">
+                                </a>
+                            </li>
+                            <li class="socials_list_item">
+                                <a href="" class="socials_list_item_link">
+                                    <img src="icons/vk.svg" alt="" class="socials_list_item_link_img">
+                                </a>
+                            </li>
+                            <li class="socials_list_item">
+                                <a href="" class="socials_list_item_link">
+                                    <img src="icons/fb.svg" alt="" class="socials_list_item_link_img">
+                                </a>
+                            </li>
+                            <li class="socials_list_item">
+                                <a href="" class="socials_list_item_link">
+                                    <img src="icons/youtube.svg" alt="" class="socials_list_item_link_img">
+
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                
+
+                <div class="footer_right">
+
+                    <ul class="info">
+                        <li class="info_item">
+                            <a href="#" class="info_item_link">Чему вы научитесь</a>
+                        </li>
+                        <li class="info_item">
+                            <a href="#" class="info_item_link">Чему вы научитесь</a>
+                        </li>
+                        <li class="info_item">
+                            <a href="#" class="info_item_link">Стоимость</a>
+                        </li>
+                        <li class="info_item">
+                            <a href="#" class="info_item_link">Контакты</a>
+                        </li>
+                        <li class="info_item">
+                            <a href="#" class="info_item_link">Регистрация</a>
+                        </li>
+                    </ul>
+
+                    <div class="contacts_container">
+                        <div class="contacts">
+                            <a href="tel:+1234567890" class="contacts_number">+7 (499) 348 9396 <br></a>
+                            <a href="mailto:example@example.com" class="contacts_mail">info@ytyt.ru</a>
+                        </div>
+        
+                        <div class="organisation_id">
+                            ИП Умаров Т. А. <br>
+                            ИНН 745216229809 <br>
+                            ОГРНИП 315745200001358 <br>
+                        </div>
+                    </div>
+                    </div>
+            </div>
+            <div class="footer_line"></div>
+            <div class="footer_bottom">
+                <div class="copyright ">© 2022 ytyt — Все права защищены</div>
+                <div class="footer_bottom_right">
+                    <a href="#" class="footer_bottom_link">Пользовательское соглашение</a>
+                    <a href="#" class="footer_bottom_link">Политика конфиденциальности</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 <script  src="js/script.js"></script>
