--- a/ytyt/index.html
+++ b/ytyt/index.html
@@ -312,7 +312,63 @@
                 </div>
             </div>
 
+            <img src="icons/scroll.svg" alt="scroll" class="scroll_img hideorbig1200">
+            <div class="coast_table">
+                <div class="container">
+                <table>
+                    <tr class="table_start">
+                        <th>Блок</th>
+                        <th>Стоимость (₽)</th>
+                        <th>Расчетное время обучения (мес.) *</th>
+                    </tr>
+                    <tr>
+                        <td>Введение в программирование</td>
+                        <td>Бесплатно</td>
+                        <td>0.5</td>
+                    </tr>
 
+                    <tr>
+                        <td>Основы программирования на Python</td>
+                        <td>9 900</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Python, продвинутый уровень</td>
+                        <td>14 900</td>
+                        <td>2.5</td>
+                    </tr>
+                    <tr>
+                        <td>Сети + фреймворк Flask</td>
+                        <td>14 900</td>
+                        <td>2.5</td>
+                    </tr>
+                    <tr>
+                        <td>Базы данных</td>
+                        <td>14 900</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>Фреймворк Django</td>
+                        <td>14 900</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>Разработка «боевого» проекта </td>
+                        <td>9 900</td>
+                        <td>1.5</td>
+                    </tr>
+                    <tr class="table_end">
+                        <td class="table_end_title">Итого</td>
+                        <td class="table_end_title">79 400</td>
+                        <td class="table_end_title">12</td>
+                    </tr>
+                </table>
+            </div>
+            </div>
+
+            <div class="table_description ">
+                * если занятиям уделяется около <br class="hideorbig1200"> 20 часов в неделю
+            </div>
 
             <div class="coast_form">
                 <img src="img/speaker.svg" alt="" class="coast_form_img">
