--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="trlm/src/index.html" class="trlm">trlm</a>
     <a href="kidsbe/src/index.html" class="kidsbe">kidsbe</a>
     <a href="ytyt/index.html" class="ytyt">ytyt</a>
-
+    <a href="css_tricks/" class="css_tricks">css_tricks</a>
 
     
 </body>
