--- a/css_tricks/2.adaptive_block/index.html
+++ b/css_tricks/2.adaptive_block/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="section">
-        <div class="phone" onmousemove="alert('Ты хуесос!')">This is phone</div>
+        <div class="phone" onmousemove="alert('Это сообщение всплывает при наведении на блок телефона')">This is phone</div>
         <div class="tablet">This is tablet</div>
         <div class="desctop">This is desctop</div>
         <h1 class="header">Адаптивная верстка</h1>
