--- a/css_tricks/index.html
+++ b/css_tricks/index.html
@@ -25,6 +25,8 @@
     <a href="17.animate_neon_buttons" class="">17.animate_neon_buttons</a>
     <a href="18.transparent_bacground" class="">18.transparent_bacground</a>
     <a href="19.checkbox" class="">19.checkbox</a>
+    <a href="20.3d_model" class="">20.3d_model</a>
+
 
 
 
