--- a/HotSkins/index.html
+++ b/HotSkins/index.html
@@ -87,37 +87,37 @@
 
                 <div class="checkbox">
                     <input type="checkbox" id="weapons2" name="food">
-                    <label for="weapons2"></label>
+                    <label for="weapons2"  class="red"></label>
                     <span class="checkbox_count">4</span>
                 </div>
 
                 <div class="checkbox">
-                    <input type="checkbox" id="weapons3" name="food">
-                    <label for="weapons3"></label>
+                    <input type="checkbox" id="weapons3" name="food"  >
+                    <label for="weapons3" class="pink"></label>
                     <span class="checkbox_count">7</span>
                 </div>
 
                 <div class="checkbox">
-                    <input type="checkbox" id="weapons4" name="food">
-                    <label for="weapons4"></label>
+                    <input type="checkbox" id="weapons4" name="food" >
+                    <label for="weapons4" class="purple"></label>
                     <span class="checkbox_count">6</span>
                 </div>
 
                 <div class="checkbox">
-                    <input type="checkbox" id="weapons5" name="food">
-                    <label for="weapons5"></label>
+                    <input type="checkbox" id="weapons5" name="food" >
+                    <label for="weapons5" class="blue"></label>
                     <span class="checkbox_count">5</span>
                 </div>
 
                 <div class="checkbox">
-                    <input type="checkbox" id="weapons6" name="food">
-                    <label for="weapons6"></label>
+                    <input type="checkbox" id="weapons6" name="food" >
+                    <label for="weapons6" class="light_blue"></label>
                     <span class="checkbox_count">0</span>
                 </div>
 
                 <div class="checkbox">
-                    <input type="checkbox" id="weapons7" name="food">
-                    <label for="weapons7"></label>
+                    <input type="checkbox" id="weapons7" name="food" >
+                    <label for="weapons7" class="white"></label>
                     <span class="checkbox_count">0</span>
                 </div>
 
@@ -140,9 +140,9 @@
         <div class="footer_content">
             <div class="Copyright">Copyright © Skincash.ru</div>
             <ul class="footer_menu">
-                <a href="" class="footer_menu_item">Помощь</a>
-                <a href="" class="footer_menu_item">Контакты</a>
-                <a href="" class="footer_menu_item">Пользовательское соглашение</a>
+                <a href="#" class="footer_menu_item">Помощь</a>
+                <a href="#" class="footer_menu_item">Контакты</a>
+                <a href="#" class="footer_menu_item">Пользовательское соглашение</a>
             </ul>
         </div>
         
