--- a/HotSkins/index.html
+++ b/HotSkins/index.html
@@ -133,6 +133,80 @@
     </div>
 </section>
 
+<section class="content">
+    <div class="container">
+        <div class="content_top">
+            <button class="select_all">
+                <img src="icons/select_all.svg" alt="" class="select_all_img">
+                <span>Обновить инвентарь</span>
+            </button>
+            <button class="sort_by">
+                <img src="icons/big_to_small.svg" alt="" class="sort_by_img">
+                <span>По цене</span>
+                <img src="icons/arrow_down.svg" alt="" class="sort_by_arrow">
+            </button>
+        </div>
+<!-- CARDS start -->
+
+    <div class="cards_block">
+        <div class="item">
+            <img src="img/cs-items/gloves1.png" alt="" class="item_img">
+            <div class="item_price">
+                24,200.64
+                <span>₽</span>
+            </div>
+            <div class="rectangle">
+                <svg width="44.000000" height="24.000000" viewBox="0 0 44 24" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <defs>
+                        <filter id="filter_4_2300_dd" x="0.000000" y="0.000000" width="44.000000" height="24.000000" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feMorphology radius="-6" in="" result="BackgroundImageFix"/>
+                            <feOffset dx="0" dy="8"/>
+                            <feGaussianBlur stdDeviation="5.33333"/>
+                            <feComposite in2="hardAlpha" operator="out" k2="-1" k3="1"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0.094118 0 0 0 0 0.15294 0 0 0 0 0.29412 0 0 0 0.078 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect_dropShadow_1"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feMorphology radius="-6" in="" result="effect_dropShadow_1"/>
+                            <feOffset dx="0" dy="6"/>
+                            <feGaussianBlur stdDeviation="2.66667"/>
+                            <feComposite in2="hardAlpha" operator="out" k2="-1" k3="1"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0.094118 0 0 0 0 0.15294 0 0 0 0 0.29412 0 0 0 0.12 0"/>
+                            <feBlend mode="normal" in2="effect_dropShadow_1" result="effect_dropShadow_2"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect_dropShadow_2" result="shape"/>
+                        </filter>
+                    </defs>
+                    <g filter="url(#filter_4_2300_dd)">
+                        <path id="Rectangle 63" d="M13.23 2L30.76 2C31.52 2 32.21 2.42 32.55 3.1L34 6L10 6L11.44 3.1C11.78 2.42 12.47 2 13.23 2Z" fill="rgb(133, 51, 237)" fill-opacity="1.000000" fill-rule="nonzero"/>
+                    </g>
+                </svg>
+            </div>
+            <div class="shadow">
+                <svg width="312.000000" height="112.000000" viewBox="0 0 112 112" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <defs>
+                        <filter id="filter_14_2693_dd" x="0.000000" y="0.000000" width="112.000000" height="112.000000" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                            <feGaussianBlur stdDeviation="10.6667" result="effect_layerBlur_1"/>
+                        </filter>
+                    </defs>
+                    <g opacity="0.400000" filter="url(#filter_14_2693_dd)">
+                        <circle id="Ellipse 34" cx="56.000000" cy="56.000000" r="24.000000" fill="rgb(133, 51, 237)" fill-opacity="1.000000"/>
+                    </g>
+                </svg>
+            </div>
+        </div>
+    </div>
+<!-- CARDS end -->
+        <div class="content_bottom">
+            <span>Ещё 521 предмет в инвентаре нельзя продать</span>
+            <a href="#" class="content_bottom_why">
+                <img src="icons/why_yellow.svg" alt="" class="">
+                <span>Почему?</span>
+            </a>
+        </div>
+    </div>
+</section>
 
 
 <footer class="footer">
@@ -147,9 +221,8 @@
         </div>
         
     </div>
-    
 </footer>
-
+</body>
 
 <script  src="js/script.js"></script>
 
